<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracy_profiler</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="guilherme.rodrigues@ait.ac.at">guilhermer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libglfw3-dev</depend>
  <depend>libdbus-1-dev</depend>
  <depend>libxkbcommon-x11-dev</depend>
  <depend>libcapstone4</depend>
  <depend>libcapstone-dev</depend>
  <depend>libfreetype6</depend>
  <depend>libfreetype6-dev</depend>
  <depend>pkg-config</depend>
  <depend>libtbb-dev</depend>
  <depend>libtiff-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
